<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/counterLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/counter_label_text" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="40sp"
        android:text="@string/counter_default_text" />

    <Button
        android:id="@+id/incrementButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/increment_button_text"
        android:textSize="40sp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/decrementButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/decrement_button_text"
        android:textColor="#000000"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/counterStep"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginTop="20sp"
        android:autofillHints="nknk"
        android:ems="10"
        android:inputType="number"
        android:textSize="40sp" />

    <Button
        android:id="@+id/openCalculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/calculator_button_text"
        android:textColor="#000000"
        android:textSize="40sp" />

</LinearLayout>