<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">
    <Button
        android:id="@+id/previousLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/previous_layout"
        android:textSize="50sp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/main_layout"
        android:textColor="#000000"
        android:textSize="50sp" />

    <Button
        android:id="@+id/baseCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/base_calculator"
        android:textColor="#000000"
        android:textSize="50sp" />

    <Button
        android:id="@+id/quadraticCalculator"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_marginTop="20sp"
        android:background="@color/buttons_color"
        android:text="@string/quadratic_calculator"
        android:textColor="#000000"
        android:textSize="50sp" />

</LinearLayout>